clarification of purpose

--- a/crx/manifest.json
+++ b/crx/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Airbnb Price Sort",
   "version": "2.0.2",
-  "description": "Enable sorting search results by final price on Airbnb website",
+  "description": "Enable sorting search results for 'stays' by final price on Airbnb website",
   "content_scripts": [{
     "matches": [
       "*://*.airbnb.com/*"
